2024-06-15  Andreas Scherer  <https://ascherer.github.io>

	* tests/fix-changefile-lines.py,
	* dvicopy.ch: Output '@x' with optional information.

2024-06-05  Andreas Scherer  <https://ascherer.github.io>

	* tests/fix-changefile-lines.py,
	* tangle.ch,
	* weave.ch: Correctly count section start markers.
	* mf.ch,
	* tex.ch: Recount parts and sections.

2024-06-03  David Fuchs  <drfuchs@yahoo.com>

	* tex.ch (check_outer_validity): don't check unless OK_to_interrupt,
	to avoid getting into an erroneous state if an \outer token
	is deleted interactively.
	Report from Tyge Thiessen:
	https://tug.org/pipermail/tex-k/2024-March/004021.html
	DEK bug entry: https://tug.org/texmfbug/newbug.html#B142outer

2024-06-03  Karl Berry  <karl@freefriends.org>

	* tests/fix-changefile-lines.py: new script from Tyge Thiessen
	to update the chapter/section/line numbers in a .ch file,
	following my request:
	https://tug.org/pipermail/tex-k/2024-June/004064.html
	* tex.ch,
	* mf.ch: update with the script.
	
	* unbalanced-braces.ch: tweak text.

2024-04-28  Luigi Scarso  <luigi.scarso@gmail.com>

	* configure.ac (LUA53_DEFINES, LUA52_DEFINES, LUAJIT_DEFINES): 
	define _LARGEFILE_SOURCE to help avoid off64_t errors. Specifically:

In file included from /home/texlive/karl/Build/source/Work/libs/zziplib/include/zzip/types.h:25,
                 from /home/texlive/karl/Build/source/Work/libs/zziplib/include/zzip/zzip.h:17,
                 from ../../../texk/web2c/luatexdir/luazip/src/luazip.c:13:
/home/texlive/karl/Build/source/Work/libs/zziplib/include/zzip/conf.h:50:23: error: unknown type name 'off64_t'
 #define _zzip_off64_t off64_t
                       ^~~~~~~
/home/texlive/karl/Build/source/Work/libs/zziplib/include/zzip/types.h:35:15: note: in expansion of macro '_zzip_off64_t'
 typedef       _zzip_off64_t     zzip_off64_t;
               ^~~~~~~~~~~~~
make[5]: *** [Makefile:10380: luatexdir/luazip/src/libluajitmisc_a-luazip.o] Error 1
