@@ -1,6 +1,6 @@
 #!/usr/bin/env perl
 use warnings;
-# $Id: epstopdf.pl 71121 2024-04-29 17:27:25Z karl $
+# $Id: epstopdf.pl 71584 2024-06-21 22:40:28Z karl $
 # (Copyright lines below.)
 #
 # Redistribution and use in source and binary forms, with or without
@@ -36,7 +36,9 @@ use warnings;
 #
 # emacs-page
 #
-my $ver = "2.34";
+my $ver = "2.35";
+#  2024/06/21 2.35 (Karl Berry)
+#    * path_sep for OS/2 is also ";".
 #  2024/04/29 2.34 (Karl Berry)
 #    * if --debug is first argument, give more output.
 #    * do not check for kpsewhich in PATH unless restricted.
@@ -226,7 +228,7 @@ my $ver = "2.34";
 ### emacs-page
 ### program identification
 my $program = "epstopdf";
-my $ident = '($Id: epstopdf.pl 71121 2024-04-29 17:27:25Z karl $)' . " $ver";
+my $ident = '($Id: epstopdf.pl 71584 2024-06-21 22:40:28Z karl $)' . " $ver";
 my $copyright = <<END_COPYRIGHT ;
 Copyright 2009-2024 Karl Berry et al.
 Copyright 2002-2009 Gerben Wierda et al.
@@ -258,7 +260,7 @@ debug " on_cygwin=$on_cygwin, on_msys=$on_msys";
 
 # Split PATH and use / as directory separator.
 #
-my $path_sep = ( ($^O =~ /^MSWin/) ? ';' : ':' ); # not msys
+my $path_sep = ($^O =~ /^(OS2|MSWin)i/) ? ';' : ':'; # not msys
 my @pdirs = split($path_sep, $ENV{"PATH"});
 # Normalize directory separators to /. Always valid on Windows.
 if ($on_windows_or_cygwin) {
